Seperate scoring algorithm to improve code readability

--- a/views/main.html
+++ b/views/main.html
@@ -95,6 +95,8 @@
     <script src="vue/dist/vue.min.js"></script>
     <!-- socket-io -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- scoring algorithm -->
+    <script src="static/js/scoring.js"></script>
     <!-- controller link -->
     <script src="static/js/controller.js"></script>
   </body>
