Update button text

--- a/views/main.html
+++ b/views/main.html
@@ -75,8 +75,8 @@
         <!-- action buttons, add functionality -->
         <div class="row">
           <button id="fold" class="btn waves-effect red col push-s1 s3">Fold</button>
-          <button id="call" class="btn waves-effect yellow black-text push-s1 col s3">Check</button>
-          <button id="bet" class="btn waves-effect green col push-s1 s3">Bet</button>
+          <button id="call" class="btn waves-effect yellow black-text push-s1 col s3">Check/Call</button>
+          <button id="bet" class="btn waves-effect green col push-s1 s3">Bet/Raise</button>
         </div>
         <!-- chat box -->
         <div class="row">
