--- a/views/main.html
+++ b/views/main.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s12 push-m3 m6 center">
+        <div class="col s12 push-m3 m6 center" v-if="state == 0">
           <h4>Current Bet: ${{ bet }}</h4>
         </div>
       </div>
