--- a/views/main.html
+++ b/views/main.html
@@ -48,7 +48,7 @@
       </div>
       <div class="row">
         <div class="col s12 push-m3 m6 center" v-if="state == 0">
-          <h4>Current Bet: ${{ bet }}</h4>
+          <h4>Current Bet: ${{ bet }} | Total Stake: ${{ tableTotal }}</h4>
         </div>
       </div>
       <!-- player's hands, don't show other users! -->
